.provarCaches/00D5f000005vwGkEAI/objects/rstk__supmtr__c.object
<CustomObject>
    <description>supmtr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__supmtr_div__r.rstk__sydiv_div__c + &apos;_&apos; +  TEXT(rstk__supmtr_number__c)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__supmtr_number__c ) + &apos;-&apos; +  rstk__supmtr_supitem__r.rstk__supitem_item__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_approvedmm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Approval indicated by checking box, allowing for creation of Outbound Shipment.</inlineHelpText>
        <label>Material Mgr Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_approvedsup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not currently in use.  Supplier&apos;s approval to receive this material transfer.</inlineHelpText>
        <label>Supplier Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_destaddress__c</fullName>
        <inlineHelpText>Address this material transfer is being shipped to.</inlineHelpText>
        <label>Destination Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Material Transfer Request</relationshipLabel>
        <relationshipName>divSupmtrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_exportlic__c</fullName>
        <label>Does the Material Require an Export Lic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supmtr_inthaz__c</fullName>
        <label>Has the Hazmat Group Been Informed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supmtr_lotno__c</fullName>
        <inlineHelpText>Lot number of the material being transferred on this request.</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_number__c</fullName>
        <inlineHelpText>The material transfer designation number assigned to this request.  System generated, but may be overwritten with any unused numeric value.</inlineHelpText>
        <label>MTR Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_obship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Outbound Shipment</label>
        <referenceTo>rstk__obship__c</referenceTo>
        <relationshipLabel>Material Transfer Request</relationshipLabel>
        <relationshipName>supmtrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_oemapproved__c</fullName>
        <label>Has the OEM Approved The Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supmtr_owner__c</fullName>
        <label>Who Owns the Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Intel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supmtr_poship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When this material transfer request has been added to an outbound shipment, the shipment ID will display in this field.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipLabel>Material Transfer Request</relationshipLabel>
        <relationshipName>poshipSupmtrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier who will receive this material transfer.  Must be valid supplier from Vendor Master.</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Material Transfer Request</relationshipLabel>
        <relationshipName>povendSupmtrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_qty__c</fullName>
        <inlineHelpText>Quantity of inventory item being transferred in inventory unit of measure.</inlineHelpText>
        <label>Transfer Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_relabel__c</fullName>
        <label>Does Material Require Re-Labeling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supmtr_released__c</fullName>
        <formula>AND( NOT(ISBLANK(TEXT(rstk__supmtr_owner__c))) ,NOT(ISBLANK(TEXT(rstk__supmtr_relabel__c))),NOT(ISBLANK(TEXT(rstk__supmtr_oemapproved__c))),NOT(ISBLANK(TEXT(rstk__supmtr_exportlic__c))),NOT(ISBLANK(TEXT(rstk__supmtr_temprecorders__c))),NOT(ISBLANK(TEXT(rstk__supmtr_tempspecverified__c))),NOT(ISBLANK(TEXT(rstk__supmtr_inthaz__c))),rstk__supmtr_approvedsup__c,rstk__supmtr_approvedmm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Released for Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_supitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Inventory Part number of item being transferred.</inlineHelpText>
        <label>Part Number</label>
        <referenceTo>rstk__supitem__c</referenceTo>
        <relationshipLabel>Material Transfer Request</relationshipLabel>
        <relationshipName>supitemSupmtrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supmtr_temprecorders__c</fullName>
        <label>Have Temp Recorders Been Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supmtr_tempspecverified__c</fullName>
        <label>Has the Temp Spec Been Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Material Transfer Request</label>
    <listViews>
        <fullName>rstk__RS_Material_Transfer_Request</fullName>
        <columns>NAME</columns>
        <columns>rstk__supmtr_div__c</columns>
        <columns>rstk__supmtr_number__c</columns>
        <columns>rstk__supmtr_obship__c</columns>
        <columns>rstk__supmtr_supitem__c</columns>
        <columns>rstk__supmtr_qty__c</columns>
        <columns>rstk__supmtr_povend__c</columns>
        <columns>rstk__supmtr_approvedsup__c</columns>
        <columns>rstk__supmtr_destaddress__c</columns>
        <columns>rstk__supmtr_approvedmm__c</columns>
        <columns>rstk__supmtr_lotno__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Material Transfer Request</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Transfer Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>